fixed overflow-y bug

--- a/src/components/Products/Products.module.scss
+++ b/src/components/Products/Products.module.scss
@@ -62,6 +62,7 @@
   position: absolute;
   z-index: -1;
   mix-blend-mode: color-burn;
+  min-width: 100%;
 }
 
 .cardContent {
