--- a/src/components/Wrapper/Wrapper.module.scss
+++ b/src/components/Wrapper/Wrapper.module.scss
@@ -4,7 +4,7 @@
   background-color: rgb(245, 178, 102);
   color: #0c1713;
   z-index: 1;
-  overflow-x: hidden;
+  overflow: hidden;
   position: relative;
 
   h1 {
